exports[`test $rootScope.googleMapsApiKey, [coords], [height], [width], [zoom] 1`] = `
"
  <figure>
    <img ng-src=\"https://maps.googleapis.com/maps/api/staticmap?center=-35%2C150&amp;key=secret&amp;markers=color%3Ared%7C-35%2C150&amp;scale=2&amp;size=200x200&amp;zoom=10\" title=\"map with center at -35 latitude, 150 longitude\" height=\"200\" width=\"200\" src=\"https://maps.googleapis.com/maps/api/staticmap?center=-35%2C150&amp;key=secret&amp;markers=color%3Ared%7C-35%2C150&amp;scale=2&amp;size=200x200&amp;zoom=10\">
  </figure>
"
`;

exports[`test no attributes 1`] = `
"
  <figure>
    <img ng-src=\"\" title=\"map of unspecified location\" height=\"300\" width=\"300\">
  </figure>
"
`;
